# frame-comparison-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
frame_comparison_tool/: __main__.py  cv2_utilities.py  frame_loader.py  main.py  video_loader.py
frame_comparison_tool/model/: __init__.py  model.py
frame_comparison_tool/presenter/: __init__.py  presenter.py
frame_comparison_tool/utils/: __init__.py  align.py  argument_parser.py  config.py  cv2_utilities.py  direction.py  display_mode.py  exceptions.py  extension_filters.py  frame_data.py  frame_loader.py  frame_loader_manager.py  frame_type.py  operation.py  path_check.py  task.py  video_formats.py  view_data.py  worker.py
frame_comparison_tool/view/: __init__.py  eliding_label.py  pannable_scroll_area.py  spinning_circle.py  styles.py  view.py
