[tool.poetry]
name = "frame-comparison-tool"
version = "0.1.0"
description = ""
authors = ["Ana Anić Banić <git@ana.banic.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

loguru = "^0.7.2"
opencv-contrib-python = "^4.10.0.84"
pillow = "^10.4.0"
llist = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
