[tool.poetry]
name = "frame-comparison-tool"
version = "0.1.0"
description = ""
authors = ["Ana Anić Banić <git@ana.banic.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

opencv-contrib-python = "^4.10.0.84"
pillow = "^10.4.0"
pyside6 = "^6.7.2"
aenum = "^3.1.15"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
